--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -42,13 +42,7 @@ jobs:
       - name: Install Rust
         run: |
           rustup toolchain install stable --profile minimal --no-self-update
-          rustup target add ${{ matrix.platform.arch }}
-
-      # musl-tools needed for static compilation
-      - name: Install musl-tools
-        run: |
-          sudo apt-get update --yes && \
-          sudo apt-get install --yes musl-tools
+          cargo install cross
 
       # Speed up builds by caching dependencies
       - name: Cache Rust
@@ -62,7 +56,7 @@ jobs:
         env:
           BINARY_NAME: ${{ env.BINARY_NAME }}
           SQLX_OFFLINE: true # Use prepared SQL queries
-        run: cargo build --target ${{ matrix.platform.arch }} --release
+        run: cross build --target ${{ matrix.platform.arch }} --release
 
       # 📦 Save our binary for later
       - name: Upload built binary as artifact
