--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,15 +40,17 @@ jobs:
 
       # Set up Rust with the specific target we need
       - name: Install Rust
-        run: |
-          rustup toolchain install stable --profile minimal --no-self-update
-          cargo install cross
+        run: rustup toolchain install stable --profile minimal --no-self-update
 
       # Speed up builds by caching dependencies
       - name: Cache Rust
         uses: Swatinem/rust-cache@v2
         with:
           workspaces: engine
+
+      # Install cross
+      - name: Install cross
+        run: cargo install cross
 
       # 🔨 Build our static binary
       - name: Build Rust binary
@@ -134,6 +136,14 @@ jobs:
       # Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      # Log into GitHub's container registry
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       # Extract metadata
       - name: Extract metadata (tags, labels) for Docker
