--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,6 +47,7 @@ jobs:
         uses: Swatinem/rust-cache@v2
         with:
           workspaces: engine
+          key: ${{ matrix.platform.arch }}
 
       # Install cross
       - name: Install cross
