--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,10 +8,6 @@ on:
       - "web/**" # Our web frontend
       - ".github/workflows/build.yaml"
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
 # Set up some global variables we'll use throughout
 env:
   REGISTRY: ghcr.io
@@ -152,12 +148,6 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=edge
-            type=sha
 
       # 🚀 Build and push multi-arch Docker image
       - name: Build Docker digests
@@ -166,8 +156,7 @@ jobs:
         with:
           context: ./engine
           file: ./engine/.build/Dockerfile.scratch
-          platforms: linux/amd64,linux/arm64
-          tags: ${{ steps.meta.outputs.tags }}
+          platforms: ${{ matrix.platform.docker }}
           labels: ${{ steps.meta.outputs.labels }}
           annotations: ${{ steps.meta.outputs.annotations }}
 
