--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,7 +27,7 @@ jobs:
           - arch: aarch64-unknown-linux-musl
             docker: linux/arm64
     timeout-minutes: 20 # Prevent hanging builds
-    runs-on: ubuntu-latest
+    runs-on: buildjet-4vcpu-ubuntu-2204
     permissions:
       contents: read
     steps:
