--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,6 +44,7 @@ jobs:
         with:
           workspaces: engine
           key: ${{ matrix.platform.arch }}
+          cache-provider: buildjet
 
       # Install cross
       - name: Install cross
