Revert buildjet testing

--- a/.github/actions/install/action.yaml
+++ b/.github/actions/install/action.yaml
@@ -13,11 +13,11 @@ runs:
         version: 8
 
     - name: Setup Node
-      uses: buildjet/setup-node@v3
+      uses: actions/setup-node@v3
       with:
         node-version: 21
         cache: pnpm
-        cache-dependency-path: "web"
+        cache-dependency-path: 'web'
 
     - name: Install dependencies
       run: cd web && pnpm install
