--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,7 +27,7 @@ jobs:
           - arch: aarch64-unknown-linux-musl
             docker: linux/arm64
     timeout-minutes: 20 # Prevent hanging builds
-    runs-on: buildjet-32vcpu-ubuntu-2204
+    runs-on: ubuntu-latest
     permissions:
       contents: read
     steps:
@@ -44,7 +44,6 @@ jobs:
         with:
           workspaces: engine
           key: ${{ matrix.platform.arch }}
-          cache-provider: buildjet
 
       # Install cross
       - name: Install cross
@@ -69,7 +68,7 @@ jobs:
 
   # 🌐 Second job: Build our web frontend
   build-web:
-    runs-on: buildjet-32vcpu-ubuntu-2204
+    runs-on: ubuntu-latest
     permissions:
       contents: read
     steps:
@@ -96,6 +95,7 @@ jobs:
 
   # 🐳 Third job: Package everything into a multi-arch Docker digests
   docker-build:
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
@@ -107,11 +107,8 @@ jobs:
         platform:
           - arch: x86_64-unknown-linux-musl
             docker: linux/amd64
-            runner: buildjet-32vcpu-ubuntu-2204
           - arch: aarch64-unknown-linux-musl
             docker: linux/arm64
-            runner: buildjet-32vcpu-ubuntu-2204-arm
-    runs-on: ${{ matrix.platform.runner }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -136,6 +133,10 @@ jobs:
         run: |
           chmod 755 ./artifacts/v3x-property-engine
           ls -la ./artifacts
+
+      # Set up QEMU for multi-arch builds
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       # Set up Docker Buildx
       - name: Set up Docker Buildx
@@ -191,7 +192,7 @@ jobs:
 
   # 🐳 Final job: Merge multi-arch digests into a single artifact
   docker-merge:
-    runs-on: buildjet-32vcpu-ubuntu-2204
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
