--- a/.github/workflows/verify_sqlx.yaml
+++ b/.github/workflows/verify_sqlx.yaml
@@ -8,8 +8,7 @@ on:
 
 jobs:
   verify_sqlx:
-    # runs-on: ubuntu-20.04
-    runs-on: buildjet-4vcpu-ubuntu-2204
+    runs-on: ubuntu-20.04
     permissions:
       contents: read
       packages: write
