--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -17,7 +17,9 @@ dotenv = "0.15.0"
 dotenvy = "0.15.7"
 hex = "0.4.3"
 hmac = "0.12.1"
-meilisearch-sdk = "0.26.1"
+meilisearch-sdk = { version = "0.26.1" } 
+# TODO: Re-enable when more stable
+# meilisearch-sdk = { git="https://github.com/CommanderStorm/meilisearch-rust", branch = "vector-search-embedder"} 
 ollama-rs = { version = "0.2.1", features = [
     "rustls",
 ], default-features = false }
