Introduce OPENID_ACCEPT_INVALID_CERTS & rework routes

--- a/engine/.env.example
+++ b/engine/.env.example
@@ -21,3 +21,6 @@ MEILISEARCH_MASTER_KEY=master
 # Ollama (Optional)
 OLLAMA_URL=http://localhost
 OLLAMA_PORT=11434
+
+# Optional (could come in handy)
+OPENID_ACCEPT_INVALID_CERTS=false
