--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,8 @@ jobs:
 
       # Set up Rust with the specific target we need
       - name: Install Rust
-        run: rustup toolchain install stable --profile minimal --no-self-update
+        run: rustup toolchain install nightly --no-self-update
+        # run: rustup toolchain install stable --profile minimal --no-self-update
 
       # Speed up builds by caching dependencies
       - name: Cache Rust
