--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -73,6 +73,7 @@ rust-s3 = { version = "0.36.0-beta.2", default-features = false, features = [
     "async-std-rustls-tls",
 ] }
 build-info = "0.0.39"
+futures = "0.3.31"
 
 [dependencies.uuid]
 version = "1.10.0"
