--- a/web/package.json
+++ b/web/package.json
@@ -28,8 +28,10 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
+    "@tanstack/query-sync-storage-persister": "^5.x.x",
     "@tanstack/react-form": "^0.39.0",
     "@tanstack/react-query": "^5.x.x",
+    "@tanstack/react-query-persist-client": "^5.x.x",
     "@tanstack/react-router": "^1.45.14",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
