--- a/.github/actions/install/action.yaml
+++ b/.github/actions/install/action.yaml
@@ -13,11 +13,12 @@ runs:
         version: 8
 
     - name: Setup Node
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@main
       with:
         node-version: 21
         cache: pnpm
-        cache-dependency-path: 'web'
+        # cache: ''
+        # cache-dependency-path: 'web'
 
     - name: Install dependencies
       run: cd web && pnpm install
