--- a/web/package.json
+++ b/web/package.json
@@ -44,6 +44,9 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "eslint-plugin-tailwindcss": "^3.15.1",
+    "embla-carousel": "^8.5.1",
+    "embla-carousel-auto-height": "^8.5.1",
+    "embla-carousel-react": "^8.5.1",
     "eslint-plugin-unused-imports": "^4.0.1",
     "fuse.js": "^7.0.0",
     "globals": "^15.8.0",
