--- a/engine/.env.example
+++ b/engine/.env.example
@@ -22,5 +22,11 @@ MEILISEARCH_MASTER_KEY=master
 OLLAMA_URL=http://localhost
 OLLAMA_PORT=11434
 
+# Gemini (Optional)
+GEMINI_API_KEY=
+
+# Kagi (Optional)
+KAGI_API_KEY=
+
 # Optional (could come in handy)
 OPENID_ACCEPT_INVALID_CERTS=false
