--- a/web/package.json
+++ b/web/package.json
@@ -45,6 +45,7 @@
     "leaflet": "^1.9.4",
     "postcss": "^8.4.38",
     "react": "^18.3.1",
+    "react-barcode": "^1.5.3",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
