--- a/web/package.json
+++ b/web/package.json
@@ -60,6 +60,7 @@
     "ua-parser-js": "^1.0.38",
     "use-debounce": "^10.0.4",
     "vite": "^5.2.10",
+    "zod": "^3.24.1",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
