--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -26,6 +26,7 @@ ollama-rs = { version = "0.2.1", features = [
 openid = { version = "0.14.0", default-features = false, features = ["rustls"] }
 poem = { version = "3.0.4", git = "https://github.com/poem-web/poem", branch = "master", features = [
     "rustls",
+    "sse"
 ] }
 poem-openapi = { version = "5", git = "https://github.com/poem-web/poem", branch = "master", features = [
     "chrono",
@@ -76,6 +77,7 @@ build-info = "0.0.39"
 futures = "0.3.31"
 headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
 rand = "0.8.5"
+async-stream = "0.3.6"
 
 [dependencies.uuid]
 version = "1.10.0"
