--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -78,6 +78,8 @@ futures = "0.3.31"
 headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
 rand = "0.8.5"
 async-stream = "0.3.6"
+futures-core = "0.3.31"
+async-trait = "0.1.83"
 
 [dependencies.uuid]
 version = "1.10.0"
