--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -193,6 +193,7 @@ jobs:
   # 🐳 Final job: Merge multi-arch digests into a single artifact
   docker-merge:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
     permissions:
       contents: read
       packages: write
