--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.93"
-async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
+async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
 aws-config = "1.5.10"
 aws-sdk-s3 = "1.64.0"
 bigdecimal = { version = "0.4.5", features = ["serde"] }
@@ -26,6 +26,7 @@ ollama-rs = { version = "0.2.1", features = [
 openid = { version = "0.14.0", default-features = false, features = ["rustls"] }
 poem = { version = "3.0.4", git = "https://github.com/poem-web/poem", branch = "master", features = [
     "rustls",
+    "sse"
 ] }
 poem-openapi = { version = "5", git = "https://github.com/poem-web/poem", branch = "master", features = [
     "chrono",
@@ -74,6 +75,11 @@ rust-s3 = { version = "0.36.0-beta.2", default-features = false, features = [
 ] }
 build-info = "0.0.39"
 futures = "0.3.31"
+headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
+rand = "0.8.5"
+async-stream = "0.3.6"
+futures-core = "0.3.31"
+async-trait = "0.1.83"
 
 [dependencies.uuid]
 version = "1.10.0"
