--- a/web/package.json
+++ b/web/package.json
@@ -35,12 +35,14 @@
     "@tanstack/react-query": "^5.x.x",
     "@tanstack/react-query-persist-client": "^5.x.x",
     "@tanstack/react-router": "^1.90.0",
+    "@tanstack/react-virtual": "^3.11.2",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "eslint-plugin-unused-imports": "^4.0.1",
+    "fuse.js": "^7.0.0",
     "globals": "^15.8.0",
     "javascript-time-ago": "^2.5.11",
     "leaflet": "^1.9.4",
