Update Popover to support multi width

--- a/engine/.env.example
+++ b/engine/.env.example
@@ -17,6 +17,7 @@ S3_SECRET_KEY=minioadmin
 # Meilisearch (Optional)
 MEILISEARCH_URL=http://localhost:7700
 MEILISEARCH_MASTER_KEY=master
+MEILISEARCH_SKIP_EMBEDDINGS=true
 
 # Ollama (Optional)
 OLLAMA_URL=http://localhost
