--- a/web/package.json
+++ b/web/package.json
@@ -36,6 +36,7 @@
     "@tanstack/react-query": "^5.x.x",
     "@tanstack/react-query-persist-client": "^5.x.x",
     "@tanstack/react-router": "^1.90.0",
+    "@tanstack/react-table": "^8.20.6",
     "@tanstack/react-virtual": "^3.11.2",
     "@vitejs/plugin-react": "^4.3.1",
     "@yornaath/batshit": "^0.10.1",
