--- a/web/package.json
+++ b/web/package.json
@@ -47,6 +47,7 @@
     "javascript-time-ago": "^2.5.11",
     "leaflet": "^1.9.4",
     "postcss": "^8.4.38",
+    "pretty-bytes": "^6.1.1",
     "react": "^18.3.1",
     "react-barcode": "^1.5.3",
     "react-dom": "^18.3.1",
