--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -55,11 +55,13 @@ jobs:
       - name: Update version number
         run: |
           if [[ ${{ github.ref }} =~ ^refs/tags/v[0-9]+\.[0-9]+\.[0-9]+.*$ ]]; then
-            echo "Release tag detected, using tag version: ${{ github.ref }}"
+            # Extract version number from tag (remove refs/tags/v prefix)
+            VERSION=${GITHUB_REF#refs/tags/v}
+            echo "Release tag detected, using version: $VERSION"
             # update the version in Cargo.toml
-            sed -i "s/^version = .*/version = \"${{ github.ref }}\"/" engine/Cargo.toml
+            sed -i "s/^version = .*/version = \"${VERSION}\"/" engine/Cargo.toml
           else
-            echo "No release tag detected, using version from Cargo.toml: ${{ github.ref }}"
+            echo "No release tag detected, using version from Cargo.toml"
             version=$(grep -oP '(?<=version = ")[^"]+' engine/Cargo.toml)
             # update the version in Cargo.toml
             sed -i "s/^version = .*/version = \"${version}-alpha\"/" engine/Cargo.toml
