--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -57,13 +57,13 @@ jobs:
           if [[ "${{ github.ref }}" =~ ^refs/tags/v[0-9]+\.[0-9]+\.[0-9]+.*$ ]]; then
             VERSION=${GITHUB_REF#refs/tags/v}
             echo "Release tag detected, using version: $VERSION"
-            sed -i "s/^version = .*/version = \"${VERSION}\"/" engine/Cargo.toml
+            sed -i "0,/^version = .*/s//version = \"${VERSION}\"/" engine/Cargo.toml
           else
             echo "No release tag detected, using version from Cargo.toml"
             # parse version from Cargo.toml using regex
             version=$(grep -oP 'version = "([^"]+?)"' engine/Cargo.toml | head -n 1 | sed 's/^version = "\(.*\)"$/\1/')
             echo "Current version: $version"
-            sed -i "s/^version = .*/version = \"${version}-alpha\"/" engine/Cargo.toml
+            sed -i '0,/^version = .*/s//version = "'${version}'-alpha"/' engine/Cargo.toml
           fi
 
       # 🔨 Build our static binary
