--- a/local-operator/Cargo.toml
+++ b/local-operator/Cargo.toml
@@ -30,3 +30,14 @@ poem-openapi = { version = "5", git = "https://github.com/poem-web/poem", branch
     "redoc",
     "static-files",
 ] }
+futures = "0.3.31"
+reqwest = { version = "0.12.9", features = [
+    "rustls-tls",
+    # Add back the default features excluding native-tls
+    "charset",
+    "http2",
+    "macos-system-configuration",
+    "json",
+], default-features = false }
+serde = "1.0.216"
+serde_json = "1.0.133"
