--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,7 @@
     "test:prepare": "mkdir -p ./playwright/.auth && touch ./playwright/.auth",
     "test:ui": "pnpm test:prepare && playwright test --ui",
     "test": "pnpm test:prepare && playwright test",
-    "lint": "eslint -c .eslintrc.json",
+    "lint": "eslint src/**/*.{ts,tsx} --fix",
     "api-schema": "openapi-typescript http://localhost:3000/openapi.json -t -o ./src/api/schema.gen.ts"
   },
   "keywords": [],
@@ -41,12 +41,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "eslint-plugin-tailwindcss": "^3.15.1",
     "eslint-plugin-unused-imports": "^4.0.1",
     "fuse.js": "^7.0.0",
     "globals": "^15.8.0",
     "javascript-time-ago": "^2.5.11",
     "leaflet": "^1.9.4",
     "postcss": "^8.4.38",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "pretty-bytes": "^6.1.1",
     "react": "^18.3.1",
     "react-barcode": "^1.5.3",
