--- a/web/package.json
+++ b/web/package.json
@@ -37,6 +37,7 @@
     "@tanstack/react-router": "^1.90.0",
     "@tanstack/react-virtual": "^3.11.2",
     "@vitejs/plugin-react": "^4.3.1",
+    "@yornaath/batshit": "^0.10.1",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
